# SE3306_Final

./: CMakeLists.txt
dep/: CMakeLists.txt
dep/MyVK/: CMakeLists.txt
dep/MyVK/include/myvk_rg/_details_/: Input.hpp  Pass.hpp
dep/MyVK/include/myvk_rg/interface/: Resource.hpp
dep/MyVK/src/rg/: RenderGraphDescriptor.cpp  RenderGraphExecutor.cpp  RenderGraphScheduler.cpp
dep/gcem/: CMakeLists.txt
dep/gl3w/: CMakeLists.txt
dep/glfw/src/: egl_context.c
dep/glm/: CMakeLists.txt
dep/mygl3/: CMakeLists.txt
dep/mygl3/include/mygl3/: buffer.hpp  flags.hpp  framebuffer.hpp  shader.hpp  texture.hpp  vertexarray.hpp
dep/stb_image/: CMakeLists.txt
dep/tinyobjloader/: CMakeLists.txt
dep/tinyobjloader/src/: tiny_obj_loader.cpp
report/: report.md
report/img/: pipeline.drawio  tumbler.ggb
shader/: CMakeLists.txt
shader/generator/: generator.cpp
shader/include/shader/: Binding.h  Config.h  Texture.h  Util.h  final.frag.u32  gbuffer.frag.u32  gbuffer.vert.u32  quad.vert.u32  shadow.frag.u32  shadow.vert.u32  ssao.frag.u32  voxel_mipmap.comp.u32  voxel_mipmap_0.comp.u32  voxelize.frag.u32  voxelize.geom.u32  voxelize.vert.u32
shader/src/: bloom_0.frag  bloom_1.frag  bloom_down.frag  bloom_down_0.frag  bloom_fetch.frag  bloom_up.frag  bloom_up_0.frag  final.frag  gbuffer.frag  gbuffer.vert  light.frag  mb_blur.frag  mb_speed_depth.frag  mb_tile_max.comp  mb_tile_nei.frag  mesh.vert  quad.vert  screen.frag  shadow.vert  smaa.frag  ssao.frag  taa.frag  taa_light.frag  voxel_mipmap.comp  voxel_mipmap_0.comp  voxelize.frag  voxelize.geom  voxelize.vert
src/: ARenderGraph.cpp  ARenderGraph.hpp  Animation.cpp  Animation.hpp  Bloom.cpp  Bloom.hpp  CameraBuffer.cpp  CameraBuffer.hpp  Collider.hpp  Config.hpp  DeepGBuffer.cpp  DeepGBuffer.hpp  GBuffer.cpp  GBuffer.hpp  GBufferPass.cpp  GBufferPass.hpp  GPUAnimation.cpp  GPUAnimation.hpp  GPUMesh.cpp  GPUMesh.hpp  GPUMeshInstance.cpp  GPUMeshInstance.hpp  LightPass.cpp  LightPass.hpp  Mesh.cpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  MotionBlur.cpp  MotionBlur.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Playground.cpp  Playground.hpp  RigidBody.hpp  SMAA.cpp  SMAA.hpp  SSAOBuffer.cpp  SSAOBuffer.hpp  ScreenPass.cpp  (+18 more)
src/rg/: ARenderGraph.cpp  ARenderGraph.hpp  BloomPass.cpp  BloomPass.hpp  GBufferPass.cpp  GBufferPass.hpp  LightPass.cpp  LightPass.hpp  MBTileMaxPass.cpp  MBTileMaxPass.hpp  MBTileNeiPass.cpp  MBTileNeiPass.hpp  MBTilePass.cpp  MBTilePass.hpp  MotionBlurPass.cpp  MotionBlurPass.hpp  ScreenPass.cpp  ScreenPass.hpp  ShadowMapPass.cpp  ShadowMapPass.hpp  TAAPass.cpp  TAAPass.hpp  VoxelMipmapPass.cpp  VoxelMipmapPass.hpp  VoxelizePass.cpp  VoxelizePass.hpp
texture/: CMakeLists.txt
texture/generator/: generator.cpp
